--- a/src/Main/java/Util/FileFormaterPackage/FileFormaterWindow.fxml
+++ b/src/Main/java/Util/FileFormaterPackage/FileFormaterWindow.fxml
@@ -14,7 +14,7 @@
       <TextField fx:id="TF_ExceptionField" editable="false" layoutX="20.0" layoutY="230.0" prefHeight="25.0" prefWidth="560.0" />
       <TextField fx:id="TF_UserInput" layoutX="20.0" layoutY="265.0" prefHeight="25.0" prefWidth="560.0" />
       <Button fx:id="B_Compile" layoutX="500.0" layoutY="298.0" mnemonicParsing="false" onAction="#CompilePattern" prefWidth="80.0" text="Compile" />
-      <Button fx:id="B_Submit" layoutX="500.0" layoutY="329.0" mnemonicParsing="false" onAction="#SubmitPattern" prefWidth="80.0" text="Submit" />
+      <Button fx:id="B_Submit" disable="true" layoutX="500.0" layoutY="329.0" mnemonicParsing="false" onAction="#SubmitPattern" prefWidth="80.0" text="Submit" />
       <CheckBox fx:id="CB_IgnoreLine" layoutX="20.0" layoutY="302.0" mnemonicParsing="false" text="Ignore first line" />
    </children>
 </AnchorPane>
