--- a/src/Main/Resources/Main.fxml
+++ b/src/Main/Resources/Main.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="900.0" prefWidth="1203.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FrontEnd.MainController">
+<AnchorPane prefHeight="900.0" prefWidth="1203.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FrontEnd.MainController" stylesheets="@Stylesheet.css">
     <children>
       <Pane layoutX="500.0" prefHeight="400.0" prefWidth="100.0" />
       <MenuBar prefHeight="30.0" prefWidth="1440.0" styleClass="menu-bar">
